# responder-httpbin

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.json  docker-compose.yml  now.json  pyproject.toml  test_httpbin.py
.github/workflows/: test.yml
httpbin/: __init__.py  core.py  filters.py  helpers.py  models.py
httpbin/templates/: httpbin.1.html  index.html
